# HSE.PIPO

./: CMakeLists.txt
common/: CMakeLists.txt  arg_parser.cpp  arg_parser.h
task1/: CMakeLists.txt  a.out  main.cpp  proceses.txt  readme.md
task2/: CMakeLists.txt  a.out  backup.cpp  backup.h  main.cpp  readme.md
task3/: CMakeLists.txt  main.cpp
task5/: CMakeLists.txt  readme.md
task5/processes/: CMakeLists.txt  factorial.cpp  factorial.h  main.cpp
task5/threads/: CMakeLists.txt  factorial.cpp  factorial.h  main.cpp
task6/: CMakeLists.txt  main.cpp  readme.md  sort.h
